Make work on Linux systems (filepath weirdness)